update jwt authorization
